fix(Notifications): add overflow to notifications

--- a/client/src/components/Header/Notifications.module.scss
+++ b/client/src/components/Header/Notifications.module.scss
@@ -7,6 +7,8 @@
     background-color: white;
     z-index: 10;
     max-width: 500px;
+    max-height: 80vh;
+    overflow-y: auto;
     width: 100vw;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     border-radius: 8px;
